Changed CATALINA_OPT